# pajaro

./: .gitignore  README.md  pyproject.toml
pajaro/: main.py
tests/: test_pajaro.py
